# ndslib

./: .buildinfo  .gitignore  LICENSE  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: docbuild.yml  publish-to-test-pypi.yml
_sources/: index.rst.txt
docs/source/: api.rst  conf.py  index.rst
ndslib/: __init__.py  config.py  data.py  image.py  viz.py
ndslib/templates/: nds.mplstyle
