[metadata]
name = ndslib
url = https://github.com/arokem/ndslib
download_url = https://github.com/arokem/ndslib
author = Ariel Rokem and Tal Yarkoni
author_email = arokem@gmail.com
maintainer = Ariel Rokem
maintainer_email = arokem@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering

license = BSD License
description = Utility functions for Data Science for Neuroimaging
long_description = file:README.md
long_description_content_type = text/markdown
platforms = OS Independent
version = 0.1.dev

[options]
python_requires = >=3.6
install_requires =
    numpy
    nibabel
    ipython
    jupyter
    pandas
    seaborn

zip_safe = False
include_package_data = True
packages = find:
