[metadata]
name = ndslib
url = https://github.com/neuroimaging-data-science/ndslib
download_url = https://github.com/neuroimaging-data-science/ndslib
author = Ariel Rokem and Tal Yarkoni
author_email = arokem@gmail.com
maintainer = Ariel Rokem
maintainer_email = arokem@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering

license = MIT License
description = Utility functions for Neuroimaging and Data Science
long_description = file:README.md
long_description_content_type = text/markdown
platforms = OS Independent
version = 0.3

[options]
python_requires = >=3.6
setup_requires =
  setuptools_scm
install_requires =
    numpy
    nibabel
    ipython
    jupyter
    pandas
    seaborn
    sphinx
    numpydoc
    sphinx_rtd_theme
    sphinx_copybutton
    sphinx-math-dollar

zip_safe = False
include_package_data = True
packages = find:
where = ndslib
